--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -1,3 +1,4 @@
+/*CTRL+SHIFT+R CHROME-ban egy HARD RESET-hez, ha nem frissülne a css változtatás...*/
 .ma{
     /*background-color: rgba(rgb(74, 255, 210), 0.5);*/
     background-color: lightblue;
