--- a/css/index.style.css
+++ b/css/index.style.css
@@ -1,3 +1,152 @@
 body{
     margin-top: 56px;
+    background-image: url("../images/linedpaper_2x.png");
 }
+.navbar{
+    background-color: #b6244f !important;
+  }
+  .navbar .navbar-brand {
+    color: #fbb7c0;
+  }
+  .navbar .navbar-brand:hover,
+  .navbar .navbar-brand:focus {
+    color: #fbb7c0;
+  }
+  .navbar .navbar-text {
+    color: #fbb7c0;
+  }
+  .navbar .navbar-text a {
+    color: #fbb7c0;
+  }
+  .navbar .navbar-text a:hover,
+  .navbar .navbar-text a:focus {
+    color: #fbb7c0; 
+  }
+  .navbar .navbar-nav .nav-link {
+    color: #fbb7c0;
+    border-radius: .25rem;
+    margin: 0 0.25em;
+  }
+  .navbar .navbar-nav .nav-link:not(.disabled):hover,
+  .navbar .navbar-nav .nav-link:not(.disabled):focus {
+    color: #fbb7c0;
+  }
+  .navbar .navbar-nav .dropdown-menu {
+    background-color: #b6244f;
+    border-color: #a22147;
+  }
+  .navbar .navbar-nav .dropdown-menu .dropdown-item {
+    color: #fbb7c0;
+  }
+  .navbar .navbar-nav .dropdown-menu .dropdown-item:hover,
+  .navbar .navbar-nav .dropdown-menu .dropdown-item:focus,
+  .navbar .navbar-nav .dropdown-menu .dropdown-item.active {
+    color: #fbb7c0;
+    background-color: #a22147;
+  }
+  .navbar .navbar-nav .dropdown-menu .dropdown-divider {
+    border-top-color: #a22147;
+  }
+  .navbar .navbar-nav .nav-item.active .nav-link,
+  .navbar .navbar-nav .nav-item.active .nav-link:hover,
+  .navbar .navbar-nav .nav-item.active .nav-link:focus,
+  .navbar .navbar-nav .nav-item.show .nav-link,
+  .navbar .navbar-nav .nav-item.show .nav-link:hover,
+  .navbar .navbar-nav .nav-item.show .nav-link:focus {
+    color: #fbb7c0;
+    background-color: #a22147;
+  }
+  .navbar .navbar-toggle {
+    border-color: #a22147;
+  }
+  .navbar .navbar-toggle:hover,
+  .navbar .navbar-toggle:focus {
+    background-color: #a22147;
+  }
+  .navbar .navbar-toggle .navbar-toggler-icon {
+    color: #fbb7c0;
+  }
+  .navbar .navbar-collapse,
+  .navbar .navbar-form {
+    border-color: #fbb7c0;
+  }
+  .navbar .navbar-link {
+    color: #fbb7c0;
+  }
+  .navbar .navbar-link:hover {
+    color: #fbb7c0;
+  }
+  
+  @media (max-width: 575px) {
+    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item {
+      color: #fbb7c0;
+    }
+    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+      color: #fbb7c0;
+    }
+    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item.active {
+      color: #fbb7c0;
+      background-color: #a22147;
+    }
+  }
+  
+  @media (max-width: 767px) {
+    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item {
+      color: #fbb7c0;
+    }
+    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+      color: #fbb7c0;
+    }
+    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item.active {
+      color: #fbb7c0;
+      background-color: #a22147;
+    }
+  }
+  
+  @media (max-width: 991px) {
+    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item {
+      color: #fbb7c0;
+    }
+    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+      color: #fbb7c0;
+    }
+    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item.active {
+      color: #fbb7c0;
+      background-color: #a22147;
+    }
+  }
+  
+  @media (max-width: 1199px) {
+    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item {
+      color: #fbb7c0;
+    }
+    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+      color: #fbb7c0;
+    }
+    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item.active {
+      color: #fbb7c0;
+      background-color: #a22147;
+    }
+  }
+  
+  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item {
+    color: #fbb7c0;
+  }
+  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+    color: #fbb7c0;
+  }
+  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item.active {
+    color: #fbb7c0;
+    background-color: #a22147;
+  }
+footer{
+    background-color: #504746 !important;
+}
+/*.card .my-4 .card-header{
+    background-color: #b89685 !important;
+}*/
