--- a/css/index.style.css
+++ b/css/index.style.css
@@ -1,4 +1,9 @@
 /*INCLUDES ALL THE BOOTSTRAP OVERWRITES AND CUSTOMIZATIONS*/
+@font-face {
+  font-family: Amatic;
+  src: url("../fonts/AmaticSC-Regular.ttf");
+  src: url("../fonts/Amatic-Bold.ttf");
+}
 body{
     margin-top: 56px;
     margin-bottom: 70px;
@@ -95,6 +100,8 @@ footer{
   background-color: lightpink;
 }
 .mycard{
+  font-family: Amatic;
+  font-size: 2em;
   margin-top: 20px;
   box-shadow: 6px 7px 18px 4px rgba(71,43,28,0.75);
 }
